client layout issue fixed

--- a/backend/public/css/homepage.css
+++ b/backend/public/css/homepage.css
@@ -381,9 +381,9 @@ body{
   border-radius: 25px;
   width: 6.4rem;
   height: 2.4rem;
-  background: #050505;
-  border-color: #050505;
-  margin-left: 60rem;
+  background: #0077ff;
+  border-color: #0077ff;
+  margin-left: 39rem;
 }
 .que-button a {
   color: #f8f9fa;
